--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,12 @@
 						<target>1.8</target>
 					</configuration>
 				</plugin>
+
+				<plugin>
+					<groupId>org.eclipse.jetty</groupId>
+					<artifactId>jetty-maven-plugin</artifactId>
+					<version>9.2.13.v20150730</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
