change account for accessing database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://128.199.133.224:3306/fecs
-jdbc.username = root
-jdbc.password = frank
+jdbc.username = fecs
+jdbc.password = fecs
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
